--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TFK Consulting LTD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet" href="css/Style">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -35,42 +35,42 @@
    <div class="carousel">
     <div class="slides">
       <div class="slide">
-        <img src="Images/1.jpg" alt="Слайд 1">
+        <img src="image/1.jpg" alt="Слайд 1">
         <div class="overlay">
           <h2>Финансови и уеб консултации</h2>
           <a href="services.html" class="btn">Виж услугите</a>
         </div>
       </div>
      <div class="slide">
-        <img src="Images/2.jpg" alt="Слайд 1">
+        <img src="image/2.jpg" alt="Слайд 1">
         <div class="overlay">
           <h2>Финансови и уеб консултации</h2>
           <a href="services.html" class="btn">Виж услугите</a>
         </div>
       </div>
      <div class="slide">
-        <img src="Images/3.jpg" alt="Слайд 1">
+        <img src="image/3.jpg" alt="Слайд 1">
         <div class="overlay">
           <h2>Финансови и уеб консултации</h2>
           <a href="services.html" class="btn">Виж услугите</a>
         </div>
       </div>
       <div class="slide">
-        <img src="Images/4.jpg" alt="Слайд 1">
+        <img src="image/4.jpg" alt="Слайд 1">
         <div class="overlay">
           <h2>Финансови и уеб консултации</h2>
           <a href="services.html" class="btn">Виж услугите</a>
         </div>
       </div>
       <div class="slide">
-        <img src="Images/5.jpg" alt="Слайд 1">
+        <img src="image/5.jpg" alt="Слайд 1">
         <div class="overlay">
           <h2>Финансови и уеб консултации</h2>
           <a href="services.html" class="btn">Виж услугите</a>
         </div>
       </div>
       <div class="slide">
-        <img src="Images/6.jpg" alt="Слайд 1">
+        <img src="image/6.jpg" alt="Слайд 1">
         <div class="overlay">
           <h2>Финансови и уеб консултации</h2>
           <a href="services.html" class="btn">Виж услугите</a>
@@ -92,7 +92,7 @@
         <p>Designed by tfk ltd</p>
     </footer>
 
-      <script src="JS/js"></script>
+      <script src="js/js.js"></script>
    
  
   <script>
