--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
   
 
     <footer>
-        <p>&copy; TFK Consulting LTD</p>
-        <p>Designed by tfk ltd</p>
+        <p>&copy; Todorov Finance Consulting</p> |
+        <p>Designed by TFC LTD</p>
     </footer>
 
       <script src="js/js.js"></script>
