--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
 <div class="service-card">
 <i class="fas fa-globe service-icon"></i>
 <h2>Уеб услуги</h2>
-<p>Изработка на сайтове и профили в социални мрежи
+<p>Изработка на сайтове и профили в социални мрежи.
 Поддръжка и добавяне на съдържание в сайтове и социални мрежи (нови продукти, услуги, актуални цени, снимки, видеоклипове и т.н.)</p>
 
 </div>
