--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <i class="fas fa-envelope"></i>
         <div>
           <h3>Имейл</h3>
-          <a href="mailto:info@tfk-consulting.bg">info@tfk-consulting.com</a>
+          <a href="mailto:info@tf-consulting.bg">info@tf-consulting.com</a>
         </div>
       </div>
 
@@ -69,8 +69,7 @@
     </div>
 
     <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d513.3411781353263!2d23.170691332226376!3d42.57915875058027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sbg!2sbg!4v1756942525938!5m2!1sbg!2sbg"
-        width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d183.6168911112946!2d23.171083577853953!3d42.579276227761646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1sbg!2sbg!4v1757198501757!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 </main>
