--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TFK Consulting LTD</title>
+    <title>Тодоров Финанс Консултинг ЕООД</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a class="logo" href="index.html" > TFK Consulting LTD</a>
+            <a class="logo" href="index.html" > Тодоров Финанс Консултинг ЕООД</a>
             <div class="hamburger">
               <span></span>
               <span></span>
@@ -75,10 +75,11 @@
 </main>
 
 
-  <footer>
-    <p>&copy; 2025 TFK Consulting LTD</p>
-    <p>Designed by tfk lt</p>
-  </footer>
+ <footer>
+        <p>&copy; Todorov Finance Consulting LTD</p> 
+        <p>Designed by TFC LTD</p>
+    </footer>
+
   <script>
   const hamburger = document.querySelector('.hamburger');
   const navLinks = document.querySelector('.nav-links');
