--- a/web-services.html
+++ b/web-services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="bg">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="contact-page">
+<body class="service-page">
     <header>
         <nav>
             <a class="logo" href="index.html" > Тодоров Финанс Консултинг ЕООД</a>
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Начало</a></li>
-                <li class="dropdown">
+               <li class="dropdown">
   <a href="#">Услуги</a>
   <ul class="dropdown-menu">
     <li><a href="web-services.html">Уеб услуги</a></li>
@@ -27,7 +27,7 @@
   </ul>
 </li>
                 <li><a href="about.html">За нас</a></li>
-                 <li>
+                <li>
                     <a href="contact.html" >Контакти</a>
                      </li>
                 </li>
@@ -40,53 +40,36 @@
         </nav>
     </header>
 
-  <main class="contact-page">
-  <section class="contact-hero">
-    <h2>При въпроси и необходимост от допълнителна информация, можете да се свържете с нас чрез посочените начини</h2>
-
-  </section>
-
-  <section class="contact-info">
-    <div class="contact-details">
-      <div class="contact-card">
-        <i class="fas fa-phone"></i>
-        <div>
-          <h3>Телефон</h3>
-          <a href="tel:+359888284729">+359 88 828 4729</a>
-        </div>
+ <main class="service-page">
+    <section class="service-detail">
+      <div class="service-card-detail">
+        <i class="fas fa-globe service-icon"></i>
+        <h1>Уеб услуги</h1>
+        <p>
+          Предлагаме цялостни решения, свързани с изработка, техническа поддръжка, 
+          актуализация и ефективно управление на уеб сайтове и профила в социални мрежи. 
+          Разработваме модерен уеб дизайн, впечатляващ с индивидуална визия и функционалност. 
+          Вярваме, че решенията при създаването на онлайн проект трябва да са адаптирани към 
+          специфичните бизнес цели. 
+        </p>
+        <p>
+          Навременната поддръжка и добавянето на актуално съдържание в онлайн пространството 
+          (нови продукти, услуги, актуални цени, снимки, видеоклипове, полезна информация и др.) 
+          са пряко свързани с постигането на индивидуалните бизнес стратегии. 
+          Професионалните решения водят до създаването на висококачествени уеб продукти и услуги.
+        </p>
       </div>
+    </section>
+  </main>
 
-      <div class="contact-card">
-        <i class="fas fa-envelope"></i>
-        <div>
-          <h3>Имейл</h3>
-          <a href="mailto:info@tf-consulting.bg">info@tf-consulting.com</a>
-        </div>
-      </div>
-
-      <div class="contact-card">
-        <i class="fab fa-facebook"></i>
-        <div>
-          <h3>Социални мрежи</h3>
-          <a href="https://www.facebook.com/people/Тодоров-Финанс-Консултинг-ЕООД/61575359815691/" target="_blank">
-            Нашата Facebook страница
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="map">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d284.7529615037765!2d23.170954519494206!3d42.57939815480153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14aacd00381acfef%3A0x36eae0548913e3ca!2sTFK%20LTD!5e0!3m2!1sbg!2sbg!4v1758056391444!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-  </section>
-</main>
-
-
- <footer>
+    <footer>
         <p>&copy; Todorov Finance Consulting LTD</p> 
         <p>Designed by TFC LTD</p>
     </footer>
 
+      <script src="js/js.js"></script>
+   
+ 
   <script>
   const hamburger = document.querySelector('.hamburger');
   const navLinks = document.querySelector('.nav-links');
