--- a/about.html
+++ b/about.html
@@ -59,5 +59,13 @@
         <p>&copy; Todorov Finance Consulting LTD</p> 
         <p>Designed by TFC LTD</p>
     </footer>
+     <script>
+  const hamburger = document.querySelector('.hamburger');
+  const navLinks = document.querySelector('.nav-links');
+
+  hamburger.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+</script>
 </body>
 </html>
