--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
 
 <section class="features">
   <div class="feature">
-    <i class="fas fa-globe"></i>
+    <i class="fas fa-globe service-icon"></i>
     <h3>Уеб услуги</h3>
     <p>Модерен уеб дизайн, поддръжка и цялостни онлайн решения.</p>
   </div>
   <div class="feature">
-    <i class="fas fa-file-alt"></i>
+    <i class="fas fa-file-alt service-icon"></i>
     <h3>Документи</h3>
     <p>Ефективна документообработка и дигитални решения.</p>
   </div>
   <div class="feature">
-    <i class="fas fa-bullhorn"></i>
+    <i class="fas fa-bullhorn service-icon"></i>
     <h3>Реклами</h3>
     <p>Обяви и рекламни кампании за постигане на бизнес цели.</p>
   </div>
