--- a/documents.html
+++ b/documents.html
@@ -78,7 +78,7 @@
     <section class="service-detail">
       <div class="service-card-detail">
         <i class="fas fa-file-alt service-icon"></i>
-        <h1>Документообработка</h1>
+        <h1>Обработка на документи</h1>
         <p>
           Предлагаме професионални документни услуги и решения, целящи постигане на ефективни 
           резултати, свързани с дейностите на нашите клиенти. 
